Add base header footer

--- a/themes/clortox/layouts/partials/header.html
+++ b/themes/clortox/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="navbar sticky">
     <a href="{{ "/" | relURL }}">Home</a>
     <a href="{{ "/about/" | relURL }}">About</a>
 </header>
