--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,16 @@
 {{ define "main" }}
+    <div class="centered top-fade dashed-bottom">
+        <div class="intro-content">
+            {{ .Content }}
+        </div>
+    </div>
 
-<h1>{{ .Title }}</h1>
-<div>
-    {{ .Content }}
-</div>
+    <div class="content-list">
+        <ul>
+        {{ range .Site.RegularPages }}
+            <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+        {{ end }}
+        </ul>
+    </div>
+
 {{ end }}
