--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -1,3 +1,8 @@
 <head>
-    <link rel="stylesheet" href="{{ "css/clortox.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "css/styles.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "css/header.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "css/footer.css" | relURL }}">
+
+    <link rel="stylesheet" href="{{ "css/background.css" | relURL }}">
+    <script src="{{ "js/scramble.js" | relURL }}"></script>
 </head>
