--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -5,4 +5,5 @@
 
     <link rel="stylesheet" href="{{ "css/background.css" | relURL }}">
     <script src="{{ "js/scramble.js" | relURL }}"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
