--- a/themes/clortox/layouts/partials/footer.html
+++ b/themes/clortox/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-fade">
+<footer>
     <div class="footer-sections">
         <div class="footer-list" style="width: 85%">
             <h4 id="contact" class="footer-header" style="margin-bottom: 5px">Contact</h4>
