--- a/themes/clortox/layouts/_default/baseof.html
+++ b/themes/clortox/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
+        <div class="parallax background"></div>
         {{- partial "header.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
