--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="{{ "css/footer.css" | relURL }}">
 
     <link rel="stylesheet" href="{{ "css/background.css" | relURL }}">
-    <script src="{{ "js/scramble.js" | relURL }}"></script>
+    <script src="{{ "js/script.js" | relURL }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
