Add terminal effect

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,4 +4,18 @@
             {{ .Content }}
         </div>
     </div>
+    <div class="homepage-card">
+        <h1 to-show="about-description" data-value="uname -a" class="typewriter">~ $&nbsp;</h1>
+        <div class="about-grid">
+            <div id="about-description">
+            <p>Software developer with a passion for literally just about
+            everything.</p>
+            <p>Aspiring postmath; Jack of all trades, master of few.</p>
+            <p>Full stack developer at Etactics Inc.</p>
+            </div>
+            <div class="hobbies">
+                <p data-value="cat hobbies.txt | less" class="typewriter">~ $&nbsp;</p>
+            </div>
+        </div>
+    </div>
 {{ end }}
