--- a/static/css/background.css
+++ b/static/css/background.css
@@ -1,13 +1,16 @@
 .background {
     background-image: url("/img/webb-dark.png");
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
+    height: 150%;
+    overflow-y: hidden;
     z-index: -1;
 
     background-position: center;
     background-repeat: repeat;
-    background-attachment: auto;
 }
 
 
