--- a/themes/clortox/layouts/_default/list.html
+++ b/themes/clortox/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="page-header dashed-bottom">
-    <h1 data-value="Posts" class="scramble">Posts</h1>
+    <h1 data-value="Posts" class="typewriter scramble"></h1>
     <p>Ideas, projects, and other musings.</p>
 </div>
 {{ range.Pages }}
