Fix different size background on different pages

--- a/themes/clortox/layouts/_default/baseof.html
+++ b/themes/clortox/layouts/_default/baseof.html
@@ -2,9 +2,9 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
-        <div class="parallax background"></div>
         {{- partial "header.html" . -}}
         <div id="content">
+        <div class="parallax background" style="overflow-y: none;"></div>
         {{- block "main" . }}{{- end }}
         </div>
         {{- partial "footer.html" . -}}
