--- a/themes/clortox/layouts/_default/single.html
+++ b/themes/clortox/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="page-header dashed-bottom">
+<div class="page-header">
     <h1 data-value="{{ .Title }}" class="scramble">{{ .Title }}</h1>
     <small class="post-list-date">{{ .Date.Format "January 2, 2006" }}</small>
 </div>
