Update css on posts list

--- a/themes/clortox/layouts/_default/list.html
+++ b/themes/clortox/layouts/_default/list.html
@@ -4,7 +4,7 @@
     <p>Ideas, projects, and other musings.</p>
 </div>
 {{ range.Pages }}
-    <article>
+    <article style="margin-left: 10vw; margin-right: 10vw;">
         <a href="{{ .Permalink }}">
             {{ if .Params.banner }}
             <div class="post-list-body-container">
