--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -6,5 +6,5 @@
     <link rel="stylesheet" href="{{ "css/background.css" | relURL }}">
     <script src="{{ "js/script.js" | relURL }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tyler's Perkins - Software Engineer</title>
+    <title>Tylers Perkins - Software Engineer</title>
 </head>
