--- a/themes/clortox/layouts/partials/footer.html
+++ b/themes/clortox/layouts/partials/footer.html
@@ -17,6 +17,6 @@
         </div>
     </div>
     <p style="margin: 0px;">
-        <small>Copyright &copy; {{ now.Year }}. All rights Reserved</small>
+    <small>Copyleft <span style="display: inline-block; transform: rotate(180deg);">&copy;</span>  {{ now.Year }}. Free open source software</small>
     </p>
 </footer>
