--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -6,5 +6,6 @@
     <link rel="stylesheet" href="{{ "css/background.css" | relURL }}">
     <script src="{{ "js/script.js" | relURL }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async src="https://ackee.clortox.com/tracker.js" data-ackee-server="https://ackee.clortox.com" data-ackee-domain-id="8e41f517-df44-41cb-970d-208872712ed6"></script>
     <title>Tylers Perkins - Software Engineer</title>
 </head>
