--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -185,6 +185,12 @@ html {
     object-fit: contain;
 }
 
+.link-block {
+    display: inline-flex;
+    align-items: center;
+
+}
+
 article > a {
     text-decoration: none;
     display: flex;
@@ -198,13 +204,17 @@ article > a {
 
 article > a:hover {
     background: black;
+    transition: background 200ms linear;
 }
 
 .post {
-    margin-right: 10vw;
-    margin-left: 10vw;
+    margin-right: 7vw;
+    margin-left: 7vw;
     margin-top: 3vh;
     margin-bottom: 1vh;
+    padding: 3vh 3vw;
+    background-color: rgba(11,11,12,0.4);
+    border-radius: 5px;
 }
 
 img {
