--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
         <div class="intro-content">
             <h1 data-value="Hi, I'm Tyler" data-show="intro-tagline" class="typewriter"></h1>
             <div id="intro-tagline">
-                <p data-value="Software engineer, postmath"></p>
+                <p data-value="Software engineer, polymath"></p>
             </div>
         </div>
     </div>
