--- a/themes/clortox/layouts/partials/footer.html
+++ b/themes/clortox/layouts/partials/footer.html
@@ -17,6 +17,9 @@
         </div>
     </div>
     <p style="margin: 0px;">
-    <small>Copyleft <span style="display: inline-block; transform: rotate(180deg);">&copy;</span>  {{ now.Year }}. Free open source software</small>
+    <small>
+        Copyleft <span style="display: inline-block; transform: rotate(180deg);">&copy;</span>  {{ now.Year }}. 
+        <a href="https://git.clortox.com/Infrastructure/Site-static">Free open source software.</a>
+    </small>
     </p>
 </footer>
