Reduce link size

--- a/themes/clortox/layouts/partials/footer.html
+++ b/themes/clortox/layouts/partials/footer.html
@@ -19,7 +19,7 @@
     <p style="margin: 0px;">
     <small>
         Copyleft <span style="display: inline-block; transform: rotate(180deg);">&copy;</span>  {{ now.Year }}. 
-        <a href="https://git.clortox.com/Infrastructure/Site-static">Free open source software.</a>
+        <a style="font-size: 0.8em;" href="https://git.clortox.com/Infrastructure/Site-static">Free open source software.</a>
     </small>
     </p>
 </footer>
