--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -10,5 +10,10 @@
     {{ range .AlternativeOutputFormats -}}
         {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
     {{ end -}}
+    {{ if .Param "math" }}
+        {{ partialCached "math.html" . }}
+    {{ end }}
+ 
+
     <title>Tylers Perkins - Software Engineer</title>
 </head>
