--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
         <div>
             <h4 data-show="about-description" data-value="uname -a" class="typewriter card-title">~ $&nbsp;</h1>
             <br/>
-            <small>AKA About for non-nerds</small>
+            <small>About me</small>
         </div>
         <div class="about-grid">
             <div id="about-description" class="about-description">
