--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -5,6 +5,9 @@
       displayMath: [['\\[', '\\]'], ['$$', '$$']],  // block
       inlineMath: [['\\(', '\\)']]                  // inline
     },
+    macros: {
+      vect: ["\\boldsymbol{#1}", 1]
+    },
     chtml: {
       scale: 1.2
     }
