Add opengraph metadata

--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -13,7 +13,17 @@
     {{ if .Param "math" }}
         {{ partialCached "math.html" . }}
     {{ end }}
- 
+
+    <
+
+    <meta property="og:title" content="Tylers Perkins - Software Engineer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ .Permalink }}" />
+    <meta property="og:image" content="https://tylerperkins.xyz/img/profile.jpg" />
+    <meta property="og:description" content="Software Engineer, aspiring polymath" />
+    <meta property="og:site_name" content="Tylers Perkins" />
+    <meta property="og:locale" content="en_US" />
+
 
     <title>Tylers Perkins - Software Engineer</title>
 </head>
