--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -24,6 +24,13 @@
     <meta property="og:site_name" content="Tylers Perkins" />
     <meta property="og:locale" content="en_US" />
 
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Tylers Perkins - Software Engineer" />
+    <meta property="twitter:description" content="Software Engineer, aspiring polymath" />
+    <meta property="twitter:image" content="https://tylerperkins.xyz/img/profile.jpg" />
+    <meta property="twitter:image:alt" content="Tylers Perkins Profile Picture">
+    <meta property="twitter:url" content="{{ .Permalink }}" />
+
 
     <title>Tylers Perkins - Software Engineer</title>
 </head>
