Make title dynamic

--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -16,16 +16,16 @@
 
     <
 
-    <meta property="og:title" content="Tylers Perkins - Software Engineer" />
+    <meta property="og:title" content="{{ if .Title }}{{ .Title }}{{ else }}Tylers Perkins - Software Engineer{{ end }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ .Permalink }}" />
     <meta property="og:image" content="https://tylerperkins.xyz/img/profile.jpg" />
     <meta property="og:description" content="Software Engineer, aspiring polymath" />
-    <meta property="og:site_name" content="Tylers Perkins" />
+    <meta property="og:site_name" content="Tylers Perkins - Software Engineer" />
     <meta property="og:locale" content="en_US" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Tylers Perkins - Software Engineer" />
+    <meta property="twitter:title" content="{{ if .Title }}{{ .Title }}{{ else }}Tylers Perkins - Software Engineer{{ end }}" />
     <meta property="twitter:description" content="Software Engineer, aspiring polymath" />
     <meta property="twitter:image" content="https://tylerperkins.xyz/img/profile.jpg" />
     <meta property="twitter:image:alt" content="Tylers Perkins Profile Picture">
