Update images to use public CDN

--- a/themes/clortox/layouts/partials/head.html
+++ b/themes/clortox/layouts/partials/head.html
@@ -16,18 +16,20 @@
 
     <
 
+    <meta name="description" content="Software Engineer, aspiring polymath"/>
+
     <meta property="og:title" content="{{ if .Title }}{{ .Title }}{{ else }}Tylers Perkins - Software Engineer{{ end }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{ .Permalink }}" />
-    <meta property="og:image" content="https://tylerperkins.xyz/img/profile.jpg" />
+    <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/d8998659-0129-4808-b73c-67797d3fe7ac.jpg?token=X4ji3MDnTCq9oofsKJXYRPV4nIaynTNQmWu0UpE8vaE&height=460&width=460&expires=33281091161">
     <meta property="og:description" content="Software Engineer, aspiring polymath" />
-    <meta property="og:site_name" content="Tylers Perkins - Software Engineer" />
+    <meta property="og:site_name" content="Tylers Perkins" />
     <meta property="og:locale" content="en_US" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="{{ if .Title }}{{ .Title }}{{ else }}Tylers Perkins - Software Engineer{{ end }}" />
     <meta property="twitter:description" content="Software Engineer, aspiring polymath" />
-    <meta property="twitter:image" content="https://tylerperkins.xyz/img/profile.jpg" />
+    <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/d8998659-0129-4808-b73c-67797d3fe7ac.jpg?token=X4ji3MDnTCq9oofsKJXYRPV4nIaynTNQmWu0UpE8vaE&height=460&width=460&expires=33281091161">
     <meta property="twitter:image:alt" content="Tylers Perkins Profile Picture">
     <meta property="twitter:url" content="{{ .Permalink }}" />
 
