Add github link

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -247,7 +247,7 @@
     </main>
 
     <footer>
-      <p>&copy; {{ now.Year }} {{ .Site.Title }} | <a href="/index.xml">RSS</a> | <a href="/me.gpg">PGP Key</a> | <a href="/resume.pdf">Resume</a></p>
+      <p>&copy; {{ now.Year }} {{ .Site.Title }} | <a href="/index.xml">RSS</a> | <a href="/me.gpg">PGP Key</a> | <a href="/resume.pdf">Resume</a> | <a href="https://github.com/Clortox">Github</a> </p>
     </footer>
 
     <script>
